Add support for setting Vm maintenance window via API
This is modeled on the PostgreSQL support, except there is
deliberately no support for specific maintenance days (even via
a feature flag).
