# openapi/openapi.yml
@@ -2530,6 +2530,34 @@ paths:
           $ref: '#/components/responses/Error'
       tags:
         - Virtual Machine
+  /project/{project_id}/location/{location}/vm/{vm_reference}/set-maintenance-window:
+    post:
+      operationId: setVMMaintenanceWindow
+      summary: Set maintenance window for the VM
+      parameters:
+        - $ref: '#/components/parameters/project_id'
+        - $ref: '#/components/parameters/location'
+        - $ref: '#/components/parameters/vm_reference'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                maintenance_window_start_at:
+                  type: integer
+                  nullable: true
+              additionalProperties: false
+              required:
+                - maintenance_window_start_at
+      responses:
+        '200':
+          $ref: '#/components/responses/Vm'
+        default:
+          $ref: '#/components/responses/Error'
+      tags:
+        - Virtual Machine
   /project/{project_id}/location/{location}/vm/{vm_reference}/start:
     parameters:
       - $ref: '#/components/parameters/project_id'
@@ -4207,6 +4235,10 @@ components:
           description: Location of the VM
           type: string
           example: eu-central-h1
+        maintenance_window_start_at:
+          description: Maintenance window start time
+          type: integer
+          nullable: true
         name:
           description: Name of the VM
           type: string
@@ -4231,6 +4263,7 @@ components:
         - ip4_enabled
         - ip6
         - location
+        - maintenance_window_start_at
         - name
         - size
         - state
